MATLAB section is completed

--- a/main.tex
+++ b/main.tex
@@ -83,13 +83,58 @@
 	\subsection{انجام دهید!}
 		سیگنال ورودی $x[n]$ و پاسخ ضربه ضربه $h[n]$ به صورت زیر تعریف شده‌اند:
 		\begin{align*}
-			x[n] &= \left(1/2\right)^{n-2}u[n-2],\\
+			x[n] &= \left(\frac{1}{2}\right)^{n-2}u[n-2],\\
 			h[n]‌&= u[n]
 		\end{align*}
-		حال اگر بخواهید $y[n]=x[n]*x[n]$ را با دستور \lstinline[language=Octave]{conv} حساب کنید، باید ملاحظاتی برای طول بی‌نهایت دو سیگنال $x[n]$ و $h[n]$ بکنید.
+		حال اگر بخواهید $y[n]=h[n]*x[n]$ را با دستور \lstinline[language=Octave]{conv} حساب کنید، باید ملاحظاتی برای طول بی‌نهایت دو سیگنال $x[n]$ و $h[n]$ بکنید.
 		
 		مقادیر $x[n]$ در بازه‌ی $0\le n\le24$ را در بردار \lstinline[language=Octave]{x} و مقادیر $h[n]$ در بازه‌ی $0\le n\le14$ را در بردار \lstinline[language=Octave]{h} ذخیره کنید. حال حاصل کانولوشن این دو سیگنال را در بردار \lstinline[language=Octave]{y} ذخیره کنید. این در حالی است که شما فقط قسمتی از دو سیگنال $x[n]$ و $h[n]$ را در نظر گرفته‌اید. پس فقط بخشی از سیگنال خروجی دارای مقادیر درست است.
 		
 		مقادیر $a$، $b$، $c$ و $d$ را به نحوی که \lr{\lstinline[language=Octave]{nh = a : b}} و \lr{\lstinline[language=Octave]{nx = c : d}} باشند، تعیین کنید و از جواب قسمت قبل برای بدست آوردن \lstinline[language=Octave]{ny} استفاده کنید. با دستور \lstinline[language=Octave]{stem} سیگنال $y[n]$ را رسم کنید و مشخص کنید چه بخشی از مقادیر آن با ارزش و چه بخشی بی‌ارزش است. (از برچسب‌های مناسب برای نمایش سیگنال خروجی استفاده کنید.)
-		
+	\subsection{انجام دهید!}
+	تابع کانولوشن را خودتان پیاده سازی کنید و آن را \lstinline[language=Octave]{myConv} بنامید.
+	سیستمی با پاسخ ضربه‌ی زیر فرض کنید:
+	$$
+	h[n] = sinc(2\pi n) (u[n + 4] - u[n - 5])
+	$$
+	خروجی این سیستم را یکبار با تابع کانولوشن متلب و یکبار با تابع خوتان برای ورودی زیر حساب کنید و صحت تابع خود را بررسی کنید.
+	$$
+	x[n]=u[n]-n[n-2]
+	$$
+	با دستور \lstinline[language=Octave]{tic} و \lstinline[language=Octave]{toc} مدت زمان انجام کانولوشن خودتان و کانولوشن متلب را بدست آورید و مقایسه کنید. علت اختلاف را شرح دهید.
+	\subsection{انجام دهید (امتیازی)!}
+	در این قسمت می‌خواهیم از روش کانولوشن بلوکی استفاده کنیم. این روش در پیاده سازی بی‌درنگ فیلترهای دیجیتال برای پردازش صوت/تصویر استفاده می‌شود.
+
+	در این روش سیگنال ورودی (که سیگنالی با طول بی‌نهایت/نامعلوم است) را به بلوک‌های کوچکتر تقسیم می‌کنیم. حال می‌توانیم هر کدام از این بلوک‌ها را به صورت مستقل پردازش کنیم البته با کمی تأخیر. 
+	
+	خطی بودن کانولوشن این تضمین را می‌دهد که برهم‌نهی \LTRfootnote{Superposition} خروجی‌های حاصل از پردازش بلوک‌ها با کانولوشن کل سیگنال با پاسخ ضربه یکسان است. وجود سخت افزار با کارایی مناسب و الگوریتم‌‌هایی برای محاسبه کانولوشن سیگنال‌هایی با طول محدود، بر اهمیت روش کانولوشن بلوکی ‌می‌افزاید. در این قسمت هر کدام از کانولوشن‌های کوچک را با دستور \lstinline[language=Octave]{conv} حساب می‌کنید.
+	
+	فرض کنید یک سیستم با پاسخ ضربه‌ی $h[n]$ دارید که فقط در بازه‌ی $0\le n \le P-1$ غیر صفر است. همچنین فرض کنید دنباله‌ی ورودی یعنی $x[n]$ برای $n<0$ صفر است و طول آن به طور قابل ملاحظه‌ای از $P$ بیشتر است.حال می‌توانید به صورت زیر سیگنال $x[n]$ را به بلوک‌هایی با طول $L$ تقسیم کنید:
+	$$
+	x[n] = \sum_{r=0}^{\infty}x_r[n-rL]
+	$$
+	که در آن $L>P$ و داریم:
+	$$
+	x_r[n]=\begin{cases}
+		x[n+rL]&, 0 \le n \le L-1,\\
+		0&, \text{(otherwise)}
+	\end{cases}
+	$$
+	شکل زیر را ببینید:
+	\begin{figure}[h]
+		\includegraphics[width=\linewidth]{segments.png}
+		\caption{تجزیه بلوکی سیگنال $x[n]$}
+	\end{figure}
+	
+	ابتدا برای دو سیگنال زیر $y[n]=h[n]*x[n]$ را با دستور \lstinline[language=Octave]{conv}  در بازه‌ی $0\le n \le 99$ حساب کنید و نمودار آن را با \lstinline[language=Octave]{stem} در بازه‌ی داده شده رسم کنید.
+	\begin{align*}
+	x[n] &= cos(n^2)sin(2\pi n/5),\\
+	h[n]‌&= (0.9)^n(u[n]-u[n-10])
+	\end{align*}
+	با فرض $L=50$ سیگنال $x[n]$ را به دو بلوک تقسیم کنید که طول هر کدام 50 شود. دو سیگنال $y_0[n]=h[n]*x_0[n]$ و $y_1[n]=h[n]*x_1[n]$ را که در آن $x_0[n]$ 50 نمونه اول $x[n]$ و $x_1[n]$ 50 نمونه دوم $x[n]$ است، حساب کنید. حال فرم سیگنال خروجی به صورت زیر خواهد بود:
+	$$y[n]=x[n]*h[n] = y_0[n] + y_1[n-k]$$
+	در عبارت بالا $k$ مناسب را بدست آورید. (دقت کنید که طول هر کدام از سیگنال های $y_0[n]$ و $y_1[n]$ باید $L+P-1$ باشد.) وقتی سیگنال $y_0[n]$ و $y_1[n]$ را با هم جمع می‌کنید، ناحیه‌ای وجود دارد که در آن مقادیر غیر صفر از دو سیگنال با هم جمع می‌شوند. به این خاطر به روش کانولوشن بلوکی، "هم‌پوشانی و اضافه کردن" نیز می‌گویند. سیگنال خروجی یعنی $y[n]$ را با اسنفاده از این روش حساب کنید و آن را در بازه $0\le n \le 99$ با استفاده از \lstinline[language=Octave]{stem} رسم کنید. آیا به همان نتیجه قبلی می‌رسید؟ نتایج را تحلیل کنید.
+	
+	در نهایت یک تابع بنویسید که عمل هم‌پوشانی و اضافه کردن را انجام دهد. ورودی‌های این تابع پاسخ ضربه (\lstinline[language=Octave]{h})، بردار ورودی سیستم (\lstinline[language=Octave]{x}) و طول هر بلاک (\lstinline[language=Octave]{L}) ات. طول بردار \lstinline[language=Octave]{x} دلخواه و طول هر بلاک یک عدد دلخواه بزرگتر از طول فیلتر است. حال قسمت قبل را با تابع خود دوباره انجام دهید.
+	
 \end{document}
