--- a/main.tex
+++ b/main.tex
@@ -48,13 +48,13 @@
 	همان‌طور که می‌دانید ذخیره تمام مقادیر یک سیگنال پیوسته در طول یک بازه‌ی زمانی ناممکن است. پس چگونه سیگنال‌های پیوسته را پردازش کنیم؟ در آینده خواهید آموخت که چگونه یک سیگنال پیوسته را با نمونه‌برداری به سیگنال گسسته تبدیل می‌کنیم. (به کمک دستور \lstinline[language=Octave]{syms} می‌توان به شکل پیوسته کار کرد، که به هیچ وجه توصیه نمی‌شود و در صورت استفاده نمره‌ای تعلق نخواهد گرفت.)
 
 	\subsection{سیگنال‌ها در متمتیکا}
-	سیگنال‌های پیوسته -زمان، به صورت نمادین تعریف شده و توابع خاص مورد استفاده دارد. سیگنال‌های گسسته-زمان، می‌توانند با ساختمان لیست  (معادل ماتریس در متلب) تعریف شوند و با توابع مخصوص پردازش گسسته مورد استفاده قرار گیرند. می‌توان به این توابع سیگنال‌های پیوسته-زمان نیز به عنوان ورودی داد و خروجی گسسته دریافت کرد.
+	سیگنال‌های پیوسته-زمان، به صورت نمادین تعریف شده و توابع خاص مورد استفاده دارد. سیگنال‌های گسسته-زمان، می‌توانند با ساختمان لیست  (معادل ماتریس در متلب) تعریف شوند و با توابع مخصوص پردازش گسسته مورد استفاده قرار گیرند. می‌توان به این توابع سیگنال‌های پیوسته-زمان نیز به عنوان ورودی داد و خروجی گسسته دریافت کرد.
 	\section{آشنایی با متمتیکا}
 	در این قسمت با متمتیکا و برخی دستورهای آن جهت محاسبه‌ی انتگرال و رسم توابع آشنا می‌شوید.
 	\subsection{رسم توابع و برخی ویژگی‌ها}
 	در متمتیکا می‌توان به راحتی توابع را به صورت پیوسته تعریف کرد، سپس به صورت پیوسته و گسسته رسم کرد. به قطعه کد زیر و خروجی آن دقت کنید.
 	\begin{latin}
-		\lstinputlisting[language=Mathematica]{plot1.nb}
+%%		\lstinputlisting[language=Mathematica]{plot1.nb}
 	\end{latin}
 	
 	\begin{figure}[h]
@@ -63,7 +63,7 @@
 		\caption{خروجی قطعه کد فوق}
 	\end{figure}
 	
-	\subsection{انجام دهید!}
+	\subsection{انجام دهید!} \label{ssec:signals}
 	سیگنال‌های زیر را در بازه‌ی زمانی $-5 \le t \le 5$ رسم کنید. (توزیع ضربه را باید خودتان تعریف کنید، دامنه‌ی آن را برای راحتی واحد در نظر بگیرید)
 	\begin{latin}
 		\begin{flushleft}
@@ -84,13 +84,16 @@
 	\subsection{انجام دهید!}
 	دو تابع انرژی و توان را طوری بنوسید که یک سیگنال را به عنوان ورودی بگیرد و انرژی یا توان آن را گزارش کند. انرژی و توان سیگنال‌های فوق را در قالب \lstinline{Table} گزارش کنید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
 	\subsection{انجام دهید!}
-	مقدار \lstinline{DC} توابع قسمت ۲.۲ را نیز محاسبه کرده و در قالب \lstinline{Table}  ارائه دهید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
+	مقدار \lstinline{DC} توابع قسمت \ref{ssec:signals} را نیز محاسبه کرده و در قالب \lstinline{Table}  ارائه دهید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
+	\begin{latin}
+		\lstinputlisting[language=Mathematica]{plot1.nb}
+	\end{latin}
 	\subsection{انجام دهید!}
 	می‌خواهیم برای پردازش‌های بعدی از سیگنال زیر نمونه‌برداری کنیم. برای این که ابتدا سیگنال را تعریف کرده سپس آن را در بازه‌ی $-5 \le t \le 5$ رسم کنید.
 	$$x_6(t) = sin(t) + 0.5 sin(3t)$$
 	نمونه‌برداری به این صورت است که تابع ضربه‌ای را از چپ به راست حرکت داده و در سیگنال مورد نظر ضرب می‌کنیم.
 	$$x_s(t) = x(t)\delta_{T_s}(t) = \sum_{n} x(nT_s)\delta(t-nT_s)$$
-	برای این کار، از تابع ضربه‌ای که برای رسم قسمت ۲.۲ از آن استفاده کردید کمک بگیرید. همچنین کافی است این ضرب را در بازه‌ی $-5 \le t \le 5$ و با فاصله‌های $0.1$ انجام داده، نتایج را در یک \lstinline{Table} ذخیره کنید، سپس شکل حاصل را رسم کنید. شکل حاصل باید مشابه شکل زیر باشد.
+	برای این کار، از تابع ضربه‌ای که برای رسم قسمت \ref{ssec:signals} از آن استفاده کردید کمک بگیرید. همچنین کافی است این ضرب را در بازه‌ی $-5 \le t \le 5$ و با فاصله‌های $0.1$ انجام داده، نتایج را در یک \lstinline{Table} ذخیره کنید، سپس شکل حاصل را رسم کنید. شکل حاصل باید مشابه شکل زیر باشد.
 	\begin{figure}[h]
 		\centering
 		\includegraphics[height=0.3\textheight,keepaspectratio]{sample.png}
