--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 	\subsection{رسم توابع و برخی ویژگی‌ها}
 	در متمتیکا می‌توان به راحتی توابع را به صورت پیوسته تعریف کرد، سپس به صورت پیوسته و گسسته رسم کرد. به قطعه کد زیر و خروجی آن دقت کنید.
 	\begin{latin}
-%%		\lstinputlisting[language=Mathematica]{plot1.nb}
+		\lstinputlisting[language=Mathematica]{plot1.nb}
 	\end{latin}
 	
 	\begin{figure}[h]
@@ -85,9 +85,6 @@
 	دو تابع انرژی و توان را طوری بنوسید که یک سیگنال را به عنوان ورودی بگیرد و انرژی یا توان آن را گزارش کند. انرژی و توان سیگنال‌های فوق را در قالب \lstinline{Table} گزارش کنید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
 	\subsection{انجام دهید!}
 	مقدار \lstinline{DC} توابع قسمت \ref{ssec:signals} را نیز محاسبه کرده و در قالب \lstinline{Table}  ارائه دهید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
-	\begin{latin}
-		\lstinputlisting[language=Mathematica]{plot1.nb}
-	\end{latin}
 	\subsection{انجام دهید!}
 	می‌خواهیم برای پردازش‌های بعدی از سیگنال زیر نمونه‌برداری کنیم. برای این که ابتدا سیگنال را تعریف کرده سپس آن را در بازه‌ی $-5 \le t \le 5$ رسم کنید.
 	$$x_6(t) = sin(t) + 0.5 sin(3t)$$
@@ -100,12 +97,34 @@
 		\caption{سیگنال پس از نمونه‌برداری}
 	\end{figure}
 	
-	\section{آشنایی با متلب}
-	\subsection{کانولوشن گسسته-زمان}
-	کانولوشن دو سیگنال گسسته $x[n]$ و $h[n]$ به صورت زیر تعریف می‌شود:
-	$$y[n]=\sum_{m=-\infty}^{+\infty} x[m]h[n-m]$$
-	تصویری از تعریف بالا را می‌توان به این صورت شرح داد: ابتدا دنباله  $h[m]$ نسبت به محور عمودی منعکس می‌شود و  $n$ نمونه به سمت چپ یا راست (با توجه به علامت $n$) جابجا می‌شود. سپس دنباله  $h[n-m]$ در دنباله  $x[m]$ ضرب می‌شود و حاصل‌جمع ِدنباله حاصل را بدست می‌آوریم. این تصویر از ویژگی خطی بودن و تغییر ناپذیری زمان سیستم های گسسته-زمان بدست می‌آید. در این قسمت استفاده از تابع \lstinline[language=Octave]{conv} (در پایتون \lstinline[language=Python]{numpy.convolve}) را یاد می‌گیرید.
-
+	\section{جابجایی زمانی سیگنال های پیوسته-زمان}
+	\subsection{آموزش}
+	در این قسمت اثرات انتقال و تغییر مقیاس زمانی سیگنال های پیوسته-زمان را بررسی می‌کنیم. سیگنال زیر را در نظر بگیرید: 
+	$$f(t)=t(u(t)-u(t-2)$$
+	که در آن $u(t)$ سیگنال پله واحد است.
+	$$
+	u(t) = \begin{cases}
+	1&, t \ge 0,\\
+	0&, t < 0.
+	\end{cases}$$
+	در کد زیر ابتدا تابع $u(t)$ را تعریف و سپس به کمک آن سیگنال $f(t)$ را رسم می‌کنیم.
+	\begin{itemize}
+		\item کد متلب
+	\end{itemize}
+	\begin{latin}
+		\lstinputlisting[language=Octave]{defu.m}
+	\end{latin}
+	\begin{itemize}
+		\item کد پایتون
+	\end{itemize}
+	\begin{latin}
+		\lstinputlisting[language=Python]{defu.py}
+	\end{latin}
+	\subsection{انجام دهید!}
+	 با توجه به سیگنال $f(t)$ نمودار سیگنال های پیوسته-زمان زیر را رسم کنید. در هر مورد بیان کنید سیگنال $f(t)$ چه تغییری کرده است؟ (مثلا "۲ واحد به سمت بالا/پایین/راست/چپ جابجا شده" یا "با ضریب ۲ فشرده/گسترده شده" یا "نسبت به محور افقی/عمودی منعکس شده")
+	 $$f(t+1)$$
+	 $$f(-t+1)$$
+	 $$f(-2t+1)$$
 	\section{کانولوشن گسسته-زمان}
 	کانولوشن دو سیگنال گسسته $x[n]$ و $h[n]$ به صورت زیر تعریف می‌شود:
 	$$y[n]=\sum_{m=-\infty}^{+\infty} x[m]h[n-m]$$
@@ -200,4 +219,17 @@
 	
 	در نهایت یک تابع بنویسید که عمل هم‌پوشانی و اضافه کردن را انجام دهد. ورودی‌های این تابع پاسخ ضربه (\lstinline[language=Octave]{h})، بردار ورودی سیستم (\lstinline[language=Octave]{x}) و طول هر بلاک (\lstinline[language=Octave]{L}) ات. طول بردار \lstinline[language=Octave]{x} دلخواه و طول هر بلاک یک عدد دلخواه بزرگتر از طول فیلتر است. حال قسمت قبل را با تابع خود دوباره انجام دهید.
 	
+	\section{نکات تحویل}
+	فایل‌های خود را با نام \lr{A1-SID.zip} در صفحه‌ی \lr{CECM} درس بارگذاری کنید که \lr{SID} شماره‌ی دانشجویی شماست؛ برای مثال اگر شماره‌ی دانشجویی شما ۸۱۰۱۹۶۹۹۹ باشد، نام پرونده‌ی شما باید \lr{A1-810196999.zip} باشد.
+	\begin{itemize}
+		\item \textbf{تحویل حضوری} این تمرین در تاریخ ۲۳ و ۲۴ اسفند ماه خواهد بود.
+		\item اگر اسم توابعی که باید بنویسید، مشخص شده است، حتما آن را رعایت کنید.
+		\item هدف این تمرین یادگیری شماست. لطفاً تمرین را خودتان انجام دهید. در صورت کشف تقلب مطابق قوانین درس با آن برخورد خواهد شد.
+		\item پیشنهاد می‌شود ساختار فایل‌ها را به صورت زیر رعایت کنید. در پوشه‌ی \lr{codes} کدها و در \lr{output} فایل‌های خروجی مانند تصاویر و فایل‌های صوتی (در تمرین‌های بعدی) را قرار دهید.
+	\end{itemize}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=5cm]{structure.png}
+		\caption{ساختار فایل‌ها}
+	\end{figure}
 \end{document}
