--- a/main.tex
+++ b/main.tex
@@ -82,9 +82,9 @@
 	\end{latin}
 
 	\subsection{انجام دهید!}
-	دو تابع انرژی و توان را طوری بنوسید که یک سیگنال را به عنوان ورودی بگیرد و انرژی یا توان آن را گزارش کند. انرژی و توان سیگنال‌های فوق را در قالب \lstinline{Table} گزارش کنید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
+	دو تابع انرژی و توان را طوری بنوسید که یک سیگنال را به عنوان ورودی بگیرد و انرژی یا توان آن را گزارش کند. انرژی و توان سیگنال‌های قسمت \ref{ssec:signals} را در قالب \lstinline{Table} گزارش کنید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
 	\subsection{انجام دهید!}
-	مقدار \lstinline{DC} توابع قسمت \ref{ssec:signals} را نیز محاسبه کرده و در قالب \lstinline{Table}  ارائه دهید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
+	مقدار \lstinline{DC} سیگنال‌های قسمت \ref{ssec:signals} را نیز محاسبه کرده و در قالب \lstinline{Table}  ارائه دهید. مقادیر بدست آمده را با تحلیل دستی خود مقایسه کنید.
 	\subsection{انجام دهید!}
 	می‌خواهیم برای پردازش‌های بعدی از سیگنال زیر نمونه‌برداری کنیم. برای این که ابتدا سیگنال را تعریف کرده سپس آن را در بازه‌ی $-5 \le t \le 5$ رسم کنید.
 	$$x_6(t) = sin(t) + 0.5 sin(3t)$$
@@ -222,6 +222,7 @@
 	\section{نکات تحویل}
 	فایل‌های خود را با نام \lr{A1-SID.zip} در صفحه‌ی \lr{CECM} درس بارگذاری کنید که \lr{SID} شماره‌ی دانشجویی شماست؛ برای مثال اگر شماره‌ی دانشجویی شما ۸۱۰۱۹۶۹۹۹ باشد، نام پرونده‌ی شما باید \lr{A1-810196999.zip} باشد.
 	\begin{itemize}
+		\item بخش ۲ را باید با متمتیکا انجام دهید. اما بخش ۳ و ۴ را می‌توانید با پایتون یا متلب انجام دهید.
 		\item \textbf{تحویل حضوری} این تمرین در تاریخ ۲۳ و ۲۴ اسفند ماه خواهد بود.
 		\item اگر اسم توابعی که باید بنویسید، مشخص شده است، حتما آن را رعایت کنید.
 		\item هدف این تمرین یادگیری شماست. لطفاً تمرین را خودتان انجام دهید. در صورت کشف تقلب مطابق قوانین درس با آن برخورد خواهد شد.
