adding a new delivery tip

--- a/main.tex
+++ b/main.tex
@@ -108,6 +108,7 @@
 	0&, t < 0.
 	\end{cases}$$
 	در کد زیر ابتدا تابع $u(t)$ را تعریف و سپس به کمک آن سیگنال $f(t)$ را رسم می‌کنیم.
+	توجه کنید که اگر از تابع \lstinline[language=Octave]{heaviside} در متلب استفاده می‌کنید، مقدار آن در زمان صفر را به ۱ تنظیم کنید. (به صورت پیش فرض ۰.۵ است.)
 	\begin{itemize}
 		\item کد متلب
 	\end{itemize}
@@ -223,6 +224,7 @@
 	فایل‌های خود را با نام \lr{A1-SID.zip} در صفحه‌ی \lr{CECM} درس بارگذاری کنید که \lr{SID} شماره‌ی دانشجویی شماست؛ برای مثال اگر شماره‌ی دانشجویی شما ۸۱۰۱۹۶۹۹۹ باشد، نام پرونده‌ی شما باید \lr{A1-810196999.zip} باشد.
 	\begin{itemize}
 		\item بخش ۲ را باید با متمتیکا انجام دهید. اما بخش ۳ و ۴ را می‌توانید با پایتون یا متلب انجام دهید.
+		\item تحلیل‌های خواسته شده و تصاویر نمودارها را در گزارش خود بیاورید.
 		\item \textbf{تحویل حضوری} این تمرین در تاریخ ۲۳ و ۲۴ اسفند ماه خواهد بود.
 		\item اگر اسم توابعی که باید بنویسید، مشخص شده است، حتما آن را رعایت کنید.
 		\item هدف این تمرین یادگیری شماست. لطفاً تمرین را خودتان انجام دهید. در صورت کشف تقلب مطابق قوانین درس با آن برخورد خواهد شد.
