changed part 2.2 signals

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 	همان‌طور که می‌دانید ذخیره تمام مقادیر یک سیگنال پیوسته در طول یک بازه‌ی زمانی ناممکن است. پس چگونه سیگنال‌های پیوسته را پردازش کنیم؟ در آینده خواهید آموخت که چگونه یک سیگنال پیوسته را با نمونه‌برداری به سیگنال گسسته تبدیل می‌کنیم. (به کمک دستور \lstinline[language=Octave]{syms} می‌توان به شکل پیوسته کار کرد، که به هیچ وجه توصیه نمی‌شود و در صورت استفاده نمره‌ای تعلق نخواهد گرفت.)
 
 	\subsection{سیگنال‌ها در متمتیکا}
-	سیگنال‌های پیوسته-زمان، به صورت نمادین تعریف شده و توابع خاص مورد استفاده دارد. سیگنال‌های گسسته-زمان، می‌توانند با ساختمان لیست  (معادل ماتریس در متلب) تعریف شوند و با توابع مخصوص پردازش گسسته مورد استفاده قرار گیرند. می‌توان به این توابع سیگنال‌های پیوسته-زمان نیز به عنوان ورودی داد و خروجی گسسته دریافت کرد.
+	سیگنال‌های پیوسته-زمان، به صورت نمادین تعریف شده و توابع خاص مورد استفاده دارد. سیگنال‌های گسسته-زمان، می‌توانند با ساختمان لیست  (معادل ماتریس در متلب) تعریف شوند و با توابع مخصوص پردازش گسسته مورد استفاده قرار گیرند. می‌توان به این توابع، سیگنال‌های پیوسته-زمان نیز به عنوان ورودی داد و خروجی گسسته دریافت کرد.
 	\section{آشنایی با متمتیکا}
 	در این قسمت با متمتیکا و برخی دستورهای آن جهت محاسبه‌ی انتگرال و رسم توابع آشنا می‌شوید.
 	\subsection{رسم توابع و برخی ویژگی‌ها}
@@ -59,17 +59,17 @@
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[height=0.4\textheight,keepaspectratio]{mathplot.png}
+		\includegraphics[height=0.2\textheight,keepaspectratio]{mathplot.png}
 		\caption{خروجی قطعه کد فوق}
 	\end{figure}
 	
 	\subsection{انجام دهید!} \label{ssec:signals}
-	سیگنال‌های زیر را در بازه‌ی زمانی $-5 \le t \le 5$ رسم کنید. (توزیع ضربه را باید خودتان تعریف کنید، دامنه‌ی آن را برای راحتی واحد در نظر بگیرید)
+	سیگنال‌های زیر را در بازه‌ی زمانی $-10 \le t \le 10$ به صورت سیگنال پیوسته رسم کنید. می‌توانید سیگنال‌های $x_1(t)$ و $x_2(t)$ را با پاسخ‌های تمرین دستی شماره ۱، مقایسه کنید. (توزیع ضربه را باید خودتان تعریف کنید، دامنه‌ی آن را برای راحتی واحد در نظر بگیرید.پیشنهاد می‌شود آن را به صورت دو ضابطه‌ای، برای محدوده‌ای کوتاه و خارج محدوده تعریف کنید.)
 	\begin{latin}
 		\begin{flushleft}
 			\begin{enumerate}
-				\item $x_1(t) = sinc(t)$
-				\item $x_2(t) = u(t+1) - u(t-1)$
+				\item $x_1(t) = sinc(5t) u(4-t^2)$
+				\item $x_2(t) = u(sin(\pi t) r(4-t^2)$
 				\item $x_3(t) = \begin{cases}
 									0, & t < -1,\\
 									1, & -1 < t < 0\\
@@ -88,7 +88,7 @@
 	\subsection{انجام دهید!}
 	می‌خواهیم برای پردازش‌های بعدی از سیگنال زیر نمونه‌برداری کنیم. برای این که ابتدا سیگنال را تعریف کرده سپس آن را در بازه‌ی $-5 \le t \le 5$ رسم کنید.
 	$$x_6(t) = sin(t) + 0.5 sin(3t)$$
-	نمونه‌برداری به این صورت است که تابع ضربه‌ای را از چپ به راست حرکت داده و در سیگنال مورد نظر ضرب می‌کنیم.
+	نمونه‌برداری به این صورت است که تابع ضربه‌ای را از چپ به راست حرکت داده و در سیگنال مورد نظر ضرب می‌کنیم. در ادامه‌ی درس شرط لازم برای $T_s$ و جزئیات مریوط به نمونه‌برداری را خواهید آموخت.
 	$$x_s(t) = x(t)\delta_{T_s}(t) = \sum_{n} x(nT_s)\delta(t-nT_s)$$
 	برای این کار، از تابع ضربه‌ای که برای رسم قسمت \ref{ssec:signals} از آن استفاده کردید کمک بگیرید. همچنین کافی است این ضرب را در بازه‌ی $-5 \le t \le 5$ و با فاصله‌های $0.1$ انجام داده، نتایج را در یک \lstinline{Table} ذخیره کنید، سپس شکل حاصل را رسم کنید. شکل حاصل باید مشابه شکل زیر باشد.
 	\begin{figure}[h]
