--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 		\begin{flushleft}
 			\begin{enumerate}
 				\item $x_1(t) = sinc(5t) u(4-t^2)$
-				\item $x_2(t) = u(sin(\pi t) r(4-t^2)$
+				\item $x_2(t) = u(sin(\pi t)) r(4-t^2)$
 				\item $x_3(t) = \begin{cases}
 									0, & t < -1,\\
 									1, & -1 < t < 0\\
