--- a/main.tex
+++ b/main.tex
@@ -162,7 +162,7 @@
 	h[n] &= \delta[n - a] + \delta[n - b],\\
 	x[n] &= \delta[n - c] + \delta[n - d].
 	\end{align*}
-	با تحلیل دستی $y[n]=x[n]*x[n]$ را حساب کنید. سپس \lstinline[language=Octave]{ny} را بر حسب $a$، $b$، $c$ و $d$ تعیین کنید. حال می‌توانید تابع  \lstinline[language=Octave]{convIndices} را بنویسید. این تابع اندیس زمانی ورودی‌های کانولوشن را ورودی می‌گیرد و اندیس زمانی مناسبی برای خروجی کانولوشن می‌دهد. در این مثال ورودی های این تابع دو بردار به صورت \lr{\lstinline[language=Octave]{nh = a : b}} و \lr{\lstinline[language=Octave]{nx = c : d}} هستند.
+	با تحلیل دستی $y[n]=h[n]*x[n]$ را حساب کنید. سپس \lstinline[language=Octave]{ny} را بر حسب $a$، $b$، $c$ و $d$ تعیین کنید. حال می‌توانید تابع  \lstinline[language=Octave]{convIndices} را بنویسید. این تابع اندیس زمانی ورودی‌های کانولوشن را ورودی می‌گیرد و اندیس زمانی مناسبی برای خروجی کانولوشن می‌دهد. در این مثال ورودی های این تابع دو بردار به صورت \lr{\lstinline[language=Octave]{nh = a : b}} و \lr{\lstinline[language=Octave]{nx = c : d}} هستند.
 	\subsection{انجام دهید!}
 		سیگنال ورودی $x[n]$ و پاسخ ضربه ضربه $h[n]$ به صورت زیر تعریف شده‌اند:
 		\begin{align*}
